lib: add support for LZ4-compressed kernel
Add support for extracting LZ4-compressed kernel images, as well as
LZ4-compressed ramdisk images in the kernel boot process.

Signed-off-by: Kyungsik Lee <kyungsik.lee@lge.com>
Cc: "H. Peter Anvin" <hpa@zytor.com>
Cc: Ingo Molnar <mingo@elte.hu>
Cc: Thomas Gleixner <tglx@linutronix.de>
Cc: Russell King <rmk@arm.linux.org.uk>
Cc: Borislav Petkov <bp@alien8.de>
Cc: Florian Fainelli <florian@openwrt.org>
Cc: Yann Collet <yann.collet.73@gmail.com>
Signed-off-by: Andrew Morton <akpm@linux-foundation.org>
Signed-off-by: Linus Torvalds <torvalds@linux-foundation.org>

Conflicts:
	init/Kconfig
	lib/Kconfig
	lib/Makefile
	lib/decompress_unlz4.c
	lib/lz4/Makefile
	scripts/Makefile.lib

--- a/lib/Kconfig
+++ b/lib/Kconfig
@@ -16,12 +16,6 @@ config BITREVERSE
 config RATIONAL
 	boolean
 
-config GENERIC_STRNCPY_FROM_USER
-	bool
-
-config GENERIC_STRNLEN_USER
-	bool
-
 config GENERIC_FIND_FIRST_BIT
 	bool
 
@@ -181,12 +175,6 @@ config LZO_COMPRESS
 	tristate
 
 config LZO_DECOMPRESS
-	tristate
-
-config LZ4_COMPRESS
-	tristate
-
-config LZ4HC_COMPRESS
 	tristate
 
 config LZ4_DECOMPRESS
@@ -396,5 +384,14 @@ config SIGNATURE
 	help
 	  Digital signature verification. Currently only RSA is supported.
 	  Implementation is done using GnuPG MPI library
+
+config QMI_ENCDEC
+	bool
+	help
+	  Library to encode & decode QMI messages from within
+	  the kernel. The kernel drivers encode the C structure into
+	  QMI message wire format and then send it over a transport.
+	  The kernel drivers receive the QMI message over a transport
+	  and then decode it into a C structure.
 
 endmenu
