--- a/arch/arm/configs/opensemc_fuji_hikari_row_defconfig
+++ b/arch/arm/configs/opensemc_fuji_hikari_row_defconfig
@@ -400,10 +400,10 @@ CONFIG_FB_MSM_OVERLAY0_WRITEBACK=y
 CONFIG_FB_MSM_OVERLAY1_WRITEBACK=y
 CONFIG_FB_MSM_WRITEBACK_MSM_PANEL=y
 CONFIG_FB_MSM_MIPI_R63306_PANEL_TMD_MDV22=y
-CONFIG_FB_MSM_HDMI_MSM_PANEL=y
-CONFIG_FB_MSM_HDMI_MSM_PANEL_DVI_SUPPORT=y
-CONFIG_FB_MSM_HDMI_MSM_PANEL_CEC_SUPPORT=y
-CONFIG_FB_MSM_HDMI_MSM_PANEL_CEC_USES_UEVENT=y
+#CONFIG_FB_MSM_HDMI_MSM_PANEL=y
+#CONFIG_FB_MSM_HDMI_MSM_PANEL_DVI_SUPPORT=y
+#CONFIG_FB_MSM_HDMI_MSM_PANEL_CEC_SUPPORT=y
+#CONFIG_FB_MSM_HDMI_MSM_PANEL_CEC_USES_UEVENT=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_SOUND=y
