--- a/arch/arm/configs/opensemc_fuji_nozomi_defconfig
+++ b/arch/arm/configs/opensemc_fuji_nozomi_defconfig
@@ -124,6 +124,8 @@ CONFIG_CPU_IDLE_GOV_MENU=y
 CONFIG_CPU_FREQ_MSM=y
 CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_CGROUP_BFQIO=y
 CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_SIO=y
 CONFIG_MSM_KGSL_SIMPLE_GOV=y
