--- a/arch/arm/configs/opensemc_fuji_hikari_row_defconfig
+++ b/arch/arm/configs/opensemc_fuji_hikari_row_defconfig
@@ -1,9 +1,12 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="-Evolve-v1.18"
+CONFIG_LOCALVERSION="-rebase-0.5"
 CONFIG_SYSVIPC=y
 CONFIG_TASKSTATS=y
 CONFIG_AUDIT=y
+CONFIG_AUDITSYSCALL=y
+CONFIG_AUDIT_WATCH=y
+CONFIG_AUDIT_TREE=y
 # CONFIG_AUDIT_LOGINUID_IMMUTABLE is not set
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
@@ -20,19 +23,14 @@ CONFIG_NAMESPACES=y
 # CONFIG_USER_NS is not set
 # CONFIG_PID_NS is not set
 # CONFIG_NET_NS is not set
-CONFIG_JUMP_LABEL=y
-CONFIG_KERNEL_GZIP=y
+CONFIG_KERNEL_LZO=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_RD_BZIP2=y
-CONFIG_RD_XY=y
-CONFIG_RD_GZIP=y
 CONFIG_RD_LZMA=y
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_PANIC_TIMEOUT=5
-CONFIG_HOTPLUG=y
 CONFIG_ASHMEM=y
 CONFIG_EMBEDDED=y
-# CONFIG_BCMDHD is not set
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_PROFILING=y
 CONFIG_OPROFILE=y
@@ -60,10 +58,6 @@ CONFIG_MSM_ONCRPCROUTER=y
 # CONFIG_MSM_RPCSERVER_WATCHDOG is not set
 # CONFIG_MSM_RPCSERVER_HANDSET is not set
 CONFIG_MSM_RMT_STORAGE_CLIENT=y
-CONFIG_MSM_MPDEC=y
-CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_MAX=1512000
-CONFIG_MSM_CPU_FREQ_MIN=384000
 # CONFIG_MSM_HW3D is not set
 # CONFIG_SURF_FFA_GPIO_KEYPAD is not set
 CONFIG_MSM_PIL_MODEM=y
@@ -73,6 +67,8 @@ CONFIG_MSM_PIL_DSPS=y
 CONFIG_MSM_PIL_VIDC=y
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_MSM_TZ_LOG=y
+CONFIG_MSM_RPM_LOG=y
+CONFIG_MSM_RPM_STATS_LOG=y
 CONFIG_MSM_WATCHDOG=y
 #CONFIG_MSM_DLOAD_MODE is not set
 CONFIG_MSM_ETM=y
@@ -92,10 +88,7 @@ CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SMP=y
 CONFIG_NR_CPUS=2
-CONFIG_HOTPLUG_CPU=y
-CONFIG_LOCAL_TIMERS=y
 CONFIG_PREEMPT=y
-CONFIG_HZ=100
 CONFIG_AEABI=y
 CONFIG_HIGHMEM=y
 CONFIG_VMALLOC_RESERVE=0x23200000
@@ -106,28 +99,12 @@ CONFIG_CMDLINE="androidboot.hardware=semc androidboot.baseband=msm"
 CONFIG_CMDLINE_EXTEND=y
 CONFIG_CRASH_NOTES=y
 CONFIG_CPU_FREQ=y
-CONFIG_CPU_FREQ_STAT=y
-CONFIG_CPU_FREQ_STAT_DETAILS=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_ADAPTIVE=y
-CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
-CONFIG_CPU_FREQ_GOV_WHEATLEY=y
-CONFIG_CPU_FREQ_GOV_ABYSSPLUGV2=y
-CONFIG_CPU_FREQ_GOV_ONDEMANDPLUS=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE=y
 CONFIG_CPU_IDLE=y
-CONFIG_CPU_IDLE_GOV_LADDER=y
-CONFIG_CPU_IDLE_GOV_MENU=y
-CONFIG_CPU_FREQ_MSM=y
-CONFIG_IOSCHED_ZEN=y
-CONFIG_IOSCHED_VR=y
-CONFIG_IOSCHED_FIOPS=y
-CONFIG_IOSCHED_SIO=y
-CONFIG_MSM_KGSL_SIMPLE_GOV=y
 CONFIG_VFP=y
 CONFIG_NEON=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
@@ -161,7 +138,7 @@ CONFIG_IPV6_SUBTREES=y
 # CONFIG_NETLABEL is not set
 CONFIG_NETFILTER=y
 CONFIG_NF_CONNTRACK=y
-CONFIG_NF_CONNTRACK_SECMARK=y
+# CONFIG_NF_CONNTRACK_SECMARK is not set
 CONFIG_NF_CONNTRACK_EVENTS=y
 CONFIG_NF_CT_PROTO_DCCP=y
 CONFIG_NF_CT_PROTO_SCTP=y
@@ -184,7 +161,7 @@ CONFIG_NETFILTER_XT_TARGET_LOG=y
 CONFIG_NETFILTER_XT_TARGET_MARK=y
 CONFIG_NETFILTER_XT_TARGET_NFLOG=y
 CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
-CONFIG_NETFILTER_XT_TARGET_SECMARK=y
+# CONFIG_NETFILTER_XT_TARGET_SECMARK is not set
 CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 CONFIG_NETFILTER_XT_MATCH_COMMENT=y
 CONFIG_NETFILTER_XT_MATCH_CONNLIMIT=y
@@ -224,7 +201,7 @@ CONFIG_IP_NF_TARGET_NETMAP=y
 CONFIG_IP_NF_TARGET_REDIRECT=y
 CONFIG_IP_NF_MANGLE=y
 CONFIG_IP_NF_RAW=y
-CONFIG_IP_NF_SECURITY=y
+# CONFIG_IP_NF_SECURITY is not set
 CONFIG_IP_NF_ARPTABLES=y
 CONFIG_IP_NF_ARPFILTER=y
 CONFIG_IP_NF_ARP_MANGLE=y
@@ -339,6 +316,7 @@ CONFIG_I2C_CHARDEV=y
 # CONFIG_I2C_MSM is not set
 CONFIG_I2C_QUP=y
 CONFIG_I2C_SSBI=y
+CONFIG_DEBUG_GPIO=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_POWER_SUPPLY=y
 # CONFIG_BATTERY_MSM is not set
@@ -349,8 +327,7 @@ CONFIG_BATTERY_CHARGALG=y
 CONFIG_BATTERY_SEMC_ARCH=y
 CONFIG_SENSORS_MSM_ADC=y
 CONFIG_THERMAL=y
-CONFIG_THERMAL_MONITOR=y
-CONFIG_THERMAL_TSENS8x60=y
+CONFIG_THERMAL_TSENS=y
 CONFIG_THERMAL_PM8XXX=y
 CONFIG_PMIC8058=y
 CONFIG_PMIC8901=y
@@ -380,8 +357,10 @@ CONFIG_RADIO_TAVARUA=y
 CONFIG_ION=y
 CONFIG_ION_MSM=y
 CONFIG_MSM_KGSL=y
+# CONFIG_KGSL_COMPAT is not set
 CONFIG_KGSL_PER_PROCESS_PAGE_TABLE=y
-CONFIG_MSM_KGSL_PAGE_TABLE_COUNT=32
+CONFIG_MSM_KGSL_PAGE_TABLE_COUNT=24
+CONFIG_VIDEO_OUTPUT_CONTROL=y
 CONFIG_FB=y
 CONFIG_FB_MSM=y
 # CONFIG_FB_MSM_BACKLIGHT is not set
@@ -390,9 +369,14 @@ CONFIG_FB_MSM_TRIPLE_BUFFER=y
 CONFIG_FB_MSM_MDP40=y
 CONFIG_FB_MSM_OVERLAY=y
 CONFIG_FB_MSM_NO_MDP_PIPE_CTRL=y
-CONFIG_FB_MSM_PANEL_NONE=y
-CONFIG_FB_MSM_WRITEBACK_MSM_PANEL=y
+# CONFIG_FB_MSM_OVERLAY0_WRITEBACK is not set
+# CONFIG_FB_MSM_OVERLAY1_WRITEBACK is not set
+# CONFIG_FB_MSM_WRITEBACK_MSM_PANEL is not set
 CONFIG_FB_MSM_MIPI_R63306_PANEL_TMD_MDV22=y
+#CONFIG_FB_MSM_HDMI_MSM_PANEL=y
+#CONFIG_FB_MSM_HDMI_MSM_PANEL_DVI_SUPPORT=y
+#CONFIG_FB_MSM_HDMI_MSM_PANEL_CEC_SUPPORT=y
+#CONFIG_FB_MSM_HDMI_MSM_PANEL_CEC_USES_UEVENT=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_SOUND=y
@@ -454,7 +438,6 @@ CONFIG_SWITCH_GPIO=y
 CONFIG_RTC_CLASS=y
 # CONFIG_RTC_DRV_MSM is not set
 CONFIG_RTC_DRV_PM8XXX=y
-CONFIG_RTC_SEMC_ETS=y
 CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
@@ -488,7 +471,10 @@ CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC=y
 # CONFIG_SCHED_DEBUG is not set
 CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_PREEMPT is not set
+CONFIG_DEBUG_INFO=y
 CONFIG_ENABLE_DEFAULT_TRACERS=y
+CONFIG_DYNAMIC_DEBUG=y
+CONFIG_DEBUG_USER=y
 CONFIG_KEYS=y
 CONFIG_SECURITY=y
 # CONFIG_SECURITYFS is not set
@@ -516,14 +502,4 @@ CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_DEV_QCRYPTO=m
 CONFIG_CRYPTO_DEV_QCE=m
 CONFIG_CRYPTO_DEV_QCEDEV=m
-CONFIG_ASYNC_FSYNC=y
-CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_INTELLI_PLUG=y
-CONFIG_FRANDOM=m
-CONFIG_F2FS_FS=y
-CONFIG_F2FS_STAT_FS=y
-CONFIG_F2FS_FS_XATTR=y
-CONFIG_F2FS_FS_POSIX_ACL=y
-CONFIG_F2FS_FS_SECURITY=y
-# CONFIG_F2FS_CHECK_FS is not set
-CONFIG_MSM_SCM=y
