defconfig: fixed old thermal reference
Conflicts:
	arch/arm/configs/opensemc_fuji_hikari_row_defconfig

--- a/arch/arm/configs/opensemc_fuji_hikari_row_defconfig
+++ b/arch/arm/configs/opensemc_fuji_hikari_row_defconfig
@@ -1,6 +1,6 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="-Evolve-v1.24"
+CONFIG_LOCALVERSION="-Evolve-v1.18"
 CONFIG_SYSVIPC=y
 CONFIG_TASKSTATS=y
 CONFIG_AUDIT=y
@@ -32,7 +32,9 @@ CONFIG_PANIC_TIMEOUT=5
 CONFIG_HOTPLUG=y
 CONFIG_ASHMEM=y
 CONFIG_EMBEDDED=y
-# CONFIG_BCMDHD is not set
+CONFIG_BCMDHD=m
+CONFIG_BCMDHD_FW_PATH="/vendor/firmware/fw_bcmdhd.bin"
+CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/calibration"
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_PROFILING=y
 CONFIG_OPROFILE=y
@@ -349,7 +351,6 @@ CONFIG_BATTERY_CHARGALG=y
 CONFIG_BATTERY_SEMC_ARCH=y
 CONFIG_SENSORS_MSM_ADC=y
 CONFIG_THERMAL=y
-CONFIG_THERMAL_MONITOR=y
 CONFIG_THERMAL_TSENS8x60=y
 CONFIG_THERMAL_PM8XXX=y
 CONFIG_PMIC8058=y
@@ -380,7 +381,6 @@ CONFIG_RADIO_TAVARUA=y
 CONFIG_ION=y
 CONFIG_ION_MSM=y
 CONFIG_MSM_KGSL=y
-# CONFIG_KGSL_COMPAT is not set
 CONFIG_KGSL_PER_PROCESS_PAGE_TABLE=y
 CONFIG_MSM_KGSL_PAGE_TABLE_COUNT=32
 CONFIG_FB=y
