--- a/arch/arm/configs/opensemc_fuji_hikari_row_defconfig
+++ b/arch/arm/configs/opensemc_fuji_hikari_row_defconfig
@@ -351,6 +351,7 @@ CONFIG_BATTERY_CHARGALG=y
 CONFIG_BATTERY_SEMC_ARCH=y
 CONFIG_SENSORS_MSM_ADC=y
 CONFIG_THERMAL=y
+CONFIG_THERMAL_MONITOR=y
 CONFIG_THERMAL_TSENS8x60=y
 CONFIG_THERMAL_PM8XXX=y
 CONFIG_PMIC8058=y
