--- a/arch/arm/configs/opensemc_fuji_nozomi_defconfig
+++ b/arch/arm/configs/opensemc_fuji_nozomi_defconfig
@@ -1,6 +1,6 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="-MAD-LEGACY-1.0"
+CONFIG_LOCALVERSION="-MAD-LEGACY-1.1"
 CONFIG_SYSVIPC=y
 CONFIG_TASKSTATS=y
 CONFIG_AUDIT=y
@@ -524,3 +524,15 @@ CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
 # CONFIG_F2FS_CHECK_FS is not set
 CONFIG_MSM_SCM=y
+CONFIG_BLK_DEV=y
+CONFIG_BLOCK=y
+CONFIG_SYSFS=y
+CONFIG_ZRAM=m
+CONFIG_ZRAM_LZ4_COMPRESS=y
+CONFIG_ZSMALLOC=y
+# CONFIG_ZRAM_DEBUG is not set
+CONFIG_LZO_COMPRESS=y
+CONFIG_LZO_DECOMPRESS=y
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
+
