--- a/arch/arm/configs/opensemc_fuji_nozomi_defconfig
+++ b/arch/arm/configs/opensemc_fuji_nozomi_defconfig
@@ -539,5 +539,5 @@ CONFIG_DECOMPRESS_LZO=y
 CONFIG_DECOMPRESS_LZ4=y
 CONFIG_CRYPTO_LZO=y
 CONFIG_CRYPTO_LZ4=y
-CONFIG_FRONTSWAP=y
+# CONFIG_FRONTSWAP is not set
 CONFIG_CLEANCACHE=y
