--- a/arch/arm/configs/opensemc_fuji_nozomi_defconfig
+++ b/arch/arm/configs/opensemc_fuji_nozomi_defconfig
@@ -1,6 +1,6 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="-MAD-LEGACY-1.1"
+CONFIG_LOCALVERSION="-MAD-LEGACY-1.2"
 CONFIG_SYSVIPC=y
 CONFIG_TASKSTATS=y
 CONFIG_AUDIT=y
@@ -541,3 +541,5 @@ CONFIG_CRYPTO_LZO=y
 CONFIG_CRYPTO_LZ4=y
 # CONFIG_FRONTSWAP is not set
 CONFIG_CLEANCACHE=y
+CONFIG_KSM=y
+CONFIG_UKSM=y
