--- a/arch/arm/configs/opensemc_fuji_nozomi_defconfig
+++ b/arch/arm/configs/opensemc_fuji_nozomi_defconfig
@@ -116,6 +116,8 @@ CONFIG_CPU_FREQ_GOV_ADAPTIVE=y
 CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 CONFIG_CPU_FREQ_GOV_ABYSSPLUGV2=y
+CONFIG_CPU_FREQ_GOV_LIONHEART=y
+CONFIG_CPU_FREQ_GOV_LAZY=y
 CONFIG_CPU_FREQ_GOV_SMARTASS2=y
 CONFIG_CPU_FREQ_GOV_ONDEMANDPLUS=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE=y
